更新 模型选择  节点选择 邮箱问题 下载按钮问题

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "",
   "Region": "",
   "Region Setting": "",
-  "North America": "",
-  "Asia": "",
-  "Europe": "",
-  "Others": "",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "",
+  "America": "",
+  "Singapore": "",
+  "Korea": "",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "",
+  "Download DeGPTto obtain rewards": "",
+  "Switch Models": "",
+  "Suitable for most tasks": "",
+  "Support image recognition": "",
+  "Optimize code writing": "",
   "Please select at least one model.": "",
+  "You can select up to four models at most.": "",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
