--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "Todavía no has comenzado las pruebas en vivo",
   "Region": "Región",
   "Region Setting": "Configuración de la región",
-  "North America": "América del Norte",
-  "Asia": "Asia",
-  "Europe": "Europa",
-  "Others": "Otros",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Para facilitar una coincidencia más rápida con el nodo GPU apropiado, seleccione su región.",
+  "America": "América",
+  "Singapore": "Singapur",
+  "Korea": "Corea",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Cuando un nodo de acceso se encuentra en una región específica, se conectará de forma preferente por defecto a los nodos de computación GPU de la misma región, reduciendo la latencia y mejorando el rendimiento.",
+  "Download DeGPTto obtain rewards": "Descarga DeGPT para obtener recompensas.",
+  "Switch Models": "Cambiar modelos",
+  "Suitable for most tasks": "Adecuado para la mayoría de las tareas",
+  "Support image recognition": "Soporte para el reconocimiento de imágenes",
+  "Optimize code writing": "Optimizar la escritura de código",
   "Please select at least one model.": "Por favor, seleccione al menos un modelo.",
+  "You can select up to four models at most.": "Puede seleccionar hasta cuatro modelos como máximo.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "La posible razón por la que no has recibido el correo electrónico es que puede que haya entrado en la bandeja de correo no deseado.",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Después de completar la autenticación del nuevo usuario, recibe una recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Recomendación",
