--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -644,12 +644,18 @@
   "Your haven't started live testing yet": "Vous n'avez pas encore commencé les tests en direct",
   "Region": "Région",
   "Region Setting": "Paramètres de région",
-  "North America": "Amérique du Nord",
-  "Asia": "Asie",
-  "Europe": "Europe",
-  "Others": "Autres",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Pour faciliter une correspondance plus rapide avec le noeud GPU approprié, veuillez sélectionner votre région.",
+  "America": "Amérique",
+  "Singapore": "Singapour",
+  "Korea": "Corée",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Lorsqu'un nœud d'accès est situé dans une région spécifique, il se connectera par défaut de manière préférentielle aux nœuds de calcul GPU de la même région, réduisant la latence et améliorant les performances.",
+  "Download DeGPTto obtain rewards": "Téléchargez DeGPT pour obtenir des récompenses.",
+  "Switch Models": "Changer de modèles",
+  "Suitable for most tasks": "Adapté à la plupart des tâches",
+  "Support image recognition": "Prise en charge de la reconnaissance d'images",
+  "Optimize code writing": "Optimiser l'écriture de code",
   "Please select at least one model.": "Veuillez sélectionner au moins un modèle.",
+  "You can select up to four models at most.": "Vous pouvez sélectionner jusqu'à quatre modèles au maximum.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "La raison possible pour laquelle vous n'avez pas reçu le courrier électronique est qu'il se peut qu'il soit arrivé dans la boîte aux lettres indésirable.",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
