--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -644,12 +644,18 @@
   "Your haven't started live testing yet": "Вы еще не начали тестирование вживую",
   "Region": "Регион",
   "Region Setting": "Настройка региона",
-  "North America": "Северная Америка",
-  "Asia": "Азия",
-  "Europe": "Европа",
-  "Others": "Другие",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Для более быстрого соответствия с соответствующим узлом GPU выберите свой регион.",
+  "America": "Америка",
+  "Singapore": "Сингапур",
+  "Korea": "Корея",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Когда узел доступа находится в определенной области, по умолчанию он предпочтительно подключается к узлам вычислений на GPU в той же области, снижая задержку и повышая производительность.",
+  "Download DeGPTto obtain rewards": "Загрузите DeGPT для получения вознаграждений.",
+  "Switch Models": "Переключить модели",
+  "Suitable for most tasks": "Подходит для большинства задач",
+  "Support image recognition": "Поддерживает распознавание изображений",
+  "Optimize code writing": "Оптимизировать написание кода",
   "Please select at least one model.": "Пожалуйста, выберите хотя бы один модель.",
+  "You can select up to four models at most.": "Вы можете выбрать до четырех моделей максимум.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "Возможной причиной того, что вы не получили письмо, является то, что оно, возможно, попало в папку со спамом.",
   "I. New User Creation Reward": "I. Премия за создание нового пользователя",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Премия за рекомендацию",
