--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -644,12 +644,18 @@
   "Your haven't started live testing yet": "您还尚未开始直播测试",
   "Region": "地区",
   "Region Setting": "地区设置",
-  "North America": "北美洲",
-  "Asia": "亚洲",
-  "Europe": "欧洲",
-  "Others": "其他",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "为了便于与合适的 GPU 节点更快地匹配，请选择您的地区。",
+  "America": "美国",
+  "Singapore": "新加坡",
+  "Korea": "韩国",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "当接入节点位于某个特定区域时，其默认优先连接至同区域 的GPU计算节点，降低延迟，提升性能。",
+  "Download DeGPTto obtain rewards": "下载 DeGPT 以便获得奖励",
+  "Switch Models": "切换模型",
+  "Suitable for most tasks": "适用于大多数任务",
+  "Support image recognition": "支持图片识别",
+  "Optimize code writing": "优化写代码功能",
   "Please select at least one model.": "请至少选择一个模型。",
+  "You can select up to four models at most.": "你最多可以选择四个模型。",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "没收到邮件可能是进入了垃圾邮箱",
   "I. New User Creation Reward": "I. 新用户创建奖励",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
   "II. Referral Reward": "II. 推荐奖励",
