--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "Sie haben die Live-Tests noch nicht begonnen",
   "Region": "Region",
   "Region Setting": "Regionseinstellung",
-  "North America": "Nordamerika",
-  "Asia": "Asien",
-  "Europe": "Europa",
-  "Others": "Andere",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Um eine schnellere Übereinstimmung mit dem entsprechenden GPU-Knoten zu ermöglichen, wählen Sie bitte Ihre Region aus.",
+  "America": "Amerika",
+  "Singapore": "Singapur",
+  "Korea": "Korea",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Wenn ein Zugriffsknoten in einer bestimmten Region platziert ist, verbindet er sich standardmäßig vorzugsweise mit GPU-Computeknoten innerhalb derselben Region, wodurch die Latenz reduziert und die Leistung gesteigert wird.",
+  "Download DeGPTto obtain rewards": "DeGPT herunterladen, um Belohnungen zu erhalten.",
+  "Switch Models": "Modellwechsel",
+  "Suitable for most tasks": "Für die meisten Aufgaben geeignet",
+  "Support image recognition": "Unterstützung der Bilderkennung",
+  "Optimize code writing": "Die Code-Schreibweise optimieren",
   "Please select at least one model.": "Bitte wählen Sie mindestens ein Modell aus.",
+  "You can select up to four models at most.": "Sie können maximal vier Modelle auswählen.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "Der mögliche Grund, warum Sie die E-Mail nicht erhalten haben, besteht darin, dass sie möglicherweise in den Spam-Ordner gelangt ist.",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
