--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
   "Region": "Wilayah",
   "Region Setting": "Pengaturan Wilayah",
-  "North America": "Amerika Utara",
-  "Asia": "Asia",
-  "Europe": "Eropa",
-  "Others": "Lainnya",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Untuk memudahkan pencocokan lebih cepat dengan node GPU yang sesuai, silakan pilih wilayah Anda.",
+  "America": "Amerika",
+  "Singapore": "Singapura",
+  "Korea": "Korea",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Ketika sebuah node akses berada di suatu wilayah tertentu, secara default akan lebih dahulu terhubung ke node komputasi GPU di wilayah yang sama, sehingga mengurangi latensi dan meningkatkan kinerja.",
+  "Download DeGPTto obtain rewards": "Unduh DeGPT untuk mendapatkan hadiah.",
+  "Switch Models": "Ganti model",
+  "Suitable for most tasks": "Cocok untuk sebagian besar tugas",
+  "Support image recognition": "Mendukung pengenalan gambar",
+  "Optimize code writing": "Mengoptimalkan penulisan kode",
   "Please select at least one model.": "Silakan pilih setidaknya satu model.",
+  "You can select up to four models at most.": "Anda dapat memilih hingga empat model terbanyak.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "Alasan yang mungkin mengapa Anda belum menerima email adalah karena mungkin sudah masuk ke kotak surat sampah.",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
