--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "あなたはまだライブテストを始めていません",
   "Region": "ちいき",
   "Region Setting": "ちいきせってい",
-  "North America": "北米（ほくべい）",
-  "Asia": "アジア",
-  "Europe": "ヨーロッパ",
-  "Others": "その他（そのた）",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "適切な GPU ノードとの迅速なマッチングを容易にするために、あなたの地域を選択してください。",
+  "America": "アメリカ",
+  "Singapore": "シンガポール",
+  "Korea": "韓国",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "アクセスノードが特定の地域に位置する場合、デフォルトでは同じ地域の GPU コンピューティングノードに優先的に接続し、遅延を低減し、性能を向上させます。",
+  "Download DeGPTto obtain rewards": "報酬を得るために DeGPT をダウンロードしてください。",
+  "Switch Models": "モデルを切り替える",
+  "Suitable for most tasks": "多くのタスクに適しています",
+  "Support image recognition": "画像認識をサポートしています",
+  "Optimize code writing": "コードの書き方を最適化します",
   "Please select at least one model.": "少なくとも 1 つのモデルを選択してください。",
+  "You can select up to four models at most.": "最大で 4 つのモデルを選択できます。",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "メールを受け取っていない可能性のある理由は、それが迷惑メールボックスに入ってしまった可能性があることです。",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
