--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "귀하는 아직 라이브 테스트를 시작하지 않았습니다",
   "Region": "지역",
   "Region Setting": "지역 설정",
-  "North America": "북미",
-  "Asia": "아시아",
-  "Europe": "유럽",
-  "Others": "기타",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "적절한 GPU 노드와의 빠른 매칭을 위해 지역을 선택해주세요.",
+  "America": "미국",
+  "Singapore": "싱가포르",
+  "Korea": "한국",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "접속 노드가 특정 지역에 위치할 때, 기본적으로 동일 지역의 GPU 계산 노드에 우선적으로 연결되어 지연을 줄이고 성능을 향상시킵니다.",
+  "Download DeGPTto obtain rewards": "보상을 받기 위해 DeGPT를 다운로드하세요.",
+  "Switch Models": "모델 전환",
+  "Suitable for most tasks": "대부분의 작업에 적합합니다",
+  "Support image recognition": "이미지 인식을 지원합니다",
+  "Optimize code writing": "코드 작성 최적화합니다",
   "Please select at least one model.": "적어도 하나의 모델을 선택하세요.",
+  "You can select up to four models at most.": "최대 4개의 모델을 선택할 수 있습니다.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "이메일을 받지 못한 가능한 이유는 그것이 스팸 메일함에 들어갔을 가능성이 있기 때문입니다.",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
