--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "Você ainda não começou os testes ao vivo",
   "Region": "Região",
   "Region Setting": "Configuração da região",
-  "North America": "América do Norte",
-  "Asia": "Ásia",
-  "Europe": "Europa",
-  "Others": "Outros",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Para facilitar uma correspondência mais rápida com o nó GPU apropriado, selecione sua região.",
+  "America": "América",
+  "Singapore": "Cingapura",
+  "Korea": "Coreia",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Quando um nó de acesso estiver localizado em uma região específica, ele se conectará preferencialmente, por padrão, aos nós de computação GPU da mesma região, reduzindo a latência e melhorando o desempenho.",
+  "Download DeGPTto obtain rewards": "Faça o download do DeGPT para obter recompensas.",
+  "Switch Models": "Mudar modelos",
+  "Suitable for most tasks": "Apropriado para a maioria das tarefas",
+  "Support image recognition": "Suporte para o reconhecimento de imagens",
+  "Optimize code writing": "Otimizar a escrita de código",
   "Please select at least one model.": "Por favor, selecione pelo menos um modelo.",
+  "You can select up to four models at most.": "Você pode selecionar até quatro modelos no máximo.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "A possível razão pela qual você não recebeu o e-mail é que ele pode ter entrado na caixa de spam.",
   "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Após completar a autenticação do novo usuário, receba uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Indicação",
