--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -644,12 +644,18 @@
   "Your haven't started live testing yet": "คุณยังไม่ได้เริ่มทดสอบสด",
   "Region": "ภูมิภาค",
   "Region Setting": "การตั้งค่าภูมิภาค",
-  "North America": "อเมริกาเหนือ",
-  "Asia": "เอเชีย",
-  "Europe": "ยุโรป",
-  "Others": "อื่นๆ",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "เพื่อให้สามารถจับคู่กับโหนด GPU ที่เหมาะสมได้เร็วขึ้น โปรดเลือกภูมิภาคของคุณ",
+  "America": "อเมริกา",
+  "Singapore": "สิงคโปร์",
+  "Korea": "เกาหลี",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "เมื่อโหนดการเข้าถึงตั้งอยู่ในพื้นที่เฉพาะบางแห่ง โหนดจะเชื่อมต่อกับโหนดคำนวณ GPU ในพื้นที่เดียวกันโดยค่าเริ่มต้นในลำดับความสำคัญ เพื่อลดความล่าช้าและเพิ่มประสิทธิภาพ",
+  "Download DeGPTto obtain rewards": "ดาวน์โหลด DeGPT เพื่อรับรางวัล",
+  "Switch Models": "สลับแบบจำลอง",
+  "Suitable for most tasks": "เหมาะสำหรับงานส่วนใหญ่",
+  "Support image recognition": "รองรับการจำแนกภาพ",
+  "Optimize code writing": "ปรับปรุงการเขียนโค้ด",
   "Please select at least one model.": "กรุณาเลือกแบบจำลองอย่างน้อยหนึ่งแบบ",
+  "You can select up to four models at most.": "คุณสามารถเลือกได้สูงสุดสี่แบบจำลอง",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "เหตุผลที่เป็นไปได้ ที่คุณไม่ได้รับอีเมล์ คือมันอาจจะไปอยู่ในกล่องจดหมายขยะ (กล่องอีเมล์ สแปม) แล้ว",
   "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC",
   "II. Referral Reward": "II. ค่าตอบแทนสำหรับการแนะนำ",
