--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "Canlı testleri henüz başlamadınız",
   "Region": "Bölge",
   "Region Setting": "Bölge Ayarları",
-  "North America": "Kuzey Amerika",
-  "Asia": "Asya",
-  "Europe": "Avrupa",
-  "Others": "Diğerler",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Uygun GPU düğümüyle daha hızlı bir eşleşme sağlamak için lütfen bölgenizi seçin.",
+  "America": "Amerika",
+  "Singapore": "Singapur",
+  "Korea": "Kore",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Erişim düğümü belirli bir bölgede yer alırken, varsayılan olarak aynı bölgedeki GPU hesaplama düğümlerine öncelikli olarak bağlanır, gecikmeyi azaltır ve performansı artırır.",
+  "Download DeGPTto obtain rewards": "Ödüller almak için DeGPT'yi indirin.",
+  "Switch Models": "Model Değiştir",
+  "Suitable for most tasks": "Çoğu görev için uygundur",
+  "Support image recognition": "Görüntü tanıma desteği sağlar",
+  "Optimize code writing": "Kod yazımını optimize et",
   "Please select at least one model.": "Lütfen en az bir model seçin.",
+  "You can select up to four models at most.": "En fazla dört model seçebilirsiniz.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "E-postayı alamadığınız olası nedeni, e-postanın çöp kutusuna girdiği olabilir.",
   "I. New User Creation Reward": "I. Yeni Kullanıcı Oluşturma Ödülü",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC ödülü alırsınız.",
   "II. Referral Reward": "II. Tavsiye Ödülü",
