--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -645,12 +645,18 @@
   "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
   "Region": "Vùng",
   "Region Setting": "Cài đặt vùng",
-  "North America": "Mỹ Bắc",
-  "Asia": "Châu Á",
-  "Europe": "Châu Âu",
-  "Others": "Các loại khác",
-  "To facilitate a quicker match with the appropriateGPU node, please select your region.": "Để thuận tiện cho việc tìm kiếm nhanh hơn với nút GPU thích hợp, xin vui lòng chọn vùng của bạn.",
+  "America": "Mỹ",
+  "Singapore": "Singapore",
+  "Korea": "Hàn Quốc",
+  "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Khi một nút truy cập nằm trong một khu vực cụ thể, nó sẽ ưu tiên kết nối đến các nút tính toán GPU trong cùng khu vực đó theo mặc định, giảm độ trễ và nâng cao hiệu suất.",
+  "Download DeGPTto obtain rewards": "Tải xuống DeGPT để nhận phần thưởng.",
+  "Switch Models": "Chuyển đổi mô hình",
+  "Suitable for most tasks": "Thích hợp cho hầu hết các nhiệm vụ",
+  "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
+  "Optimize code writing": "Tối ưu hóa việc viết mã",
   "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
+  "You can select up to four models at most.": "Bạn có thể chọn tối đa bốn mô hình.",
+  "The possible reason why you haven't received the email is that it might have gone into the spam mailbox.": "Lý do có thể khiến bạn không nhận được email là nó có thể đã vào hộp thư rác.",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
