更新kyc 奖励认证

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "ComfyUI-Basis-URL erforderlich.",
   "Command": "Befehl",
   "Confirm Password": "Passwort bestätigen",
-  "Congratulations on becoming the": "Glückwunsch zur Teilnahme an der",
+  "Congratulations on becoming": "Glückwunsch zur Teilnahme an der",
   "Congratulations on passing the verification!": "Glückwunsch zur erfolgreichen Überprüfung!",
   "Congratulations on successfully upgrading pro!": "Glückwunsch zur erfolgreichen Pro-Upgrade!",
   "Connections": "Verbindungen",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "Ihre KYC-Belohnungen wurden gutgeschrieben.",
   "The identity validate fail": "Die Identitätsüberprüfung ist fehlgeschlagen",
   "Your haven't started live testing yet": "Sie haben die Live-Tests noch nicht begonnen",
+  "AUTHENTICATED": "Authentifiziert",
+  "AUTHENTICATING": "Authentifizierung läuft",
+  "KYC AUTHENTICATION": "KYC-Authentifizierung",
+  "REWARD CREDIT": "Belohnungsgutschrift",
+  "SUCCESS": "Erfolg",
+  "FAIL": "Fehler",
+  "AUTHENTICATION RESULT": "Authentifizierungsergebnis",
+  "INFO": "Information",
+  "Wallet Adress": "Wallet-Adresse",
+  "Your kyc rewards have not been credited.": "Ihre KYC-Belohnungen wurden noch nicht gutgeschrieben.",
   "Region": "Region",
   "Region Setting": "Regionseinstellung",
   "America": "Amerika",
