--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "",
   "Command": "",
   "Confirm Password": "",
-  "Congratulations on becoming the": "",
+  "Congratulations on becoming": "",
   "Congratulations on passing the verification!": "",
   "Congratulations on successfully upgrading pro!": "",
   "Connections": "",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "",
   "The identity validate fail": "",
   "Your haven't started live testing yet": "",
+  "AUTHENTICATED": "",
+  "AUTHENTICATING": "",
+  "KYC AUTHENTICATION": "",
+  "REWARD CREDIT": "",
+  "SUCCESS": "",
+  "FAIL": "",
+  "AUTHENTICATION RESULT": "",
+  "INFO": "",
+  "Wallet Adress": "",
+  "Your kyc rewards have not been credited.": "",
   "Region": "",
   "Region Setting": "",
   "America": "",
