--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "Se requiere URL base de ComfyUI.",
   "Command": "Comando",
   "Confirm Password": "Confirmar contraseña",
-  "Congratulations on becoming the": "Felicitaciones por convertirse en",
+  "Congratulations on becoming": "Felicitaciones por convertirse en",
   "Congratulations on passing the verification!": "Felicitaciones por pasar la verificación!",
   "Congratulations on successfully upgrading pro!": "Felicitaciones por actualizar exitosamente pro!",
   "Connections": "Conexiones",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "Tus recompensas de KYC han sido acreditadas.",
   "The identity validate fail": "La validación de la identidad ha fallado",
   "Your haven't started live testing yet": "Todavía no has comenzado las pruebas en vivo",
+  "AUTHENTICATED": "Autenticado",
+  "AUTHENTICATING": "Autenticando",
+  "KYC AUTHENTICATION": "Autenticación KYC",
+  "REWARD CREDIT": "Crédito de recompensa",
+  "SUCCESS": "Éxito",
+  "FAIL": "Fallo",
+  "AUTHENTICATION RESULT": "Resultado de autenticación",
+  "INFO": "Información",
+  "Wallet Adress": "Dirección de billetera",
+  "Your kyc rewards have not been credited.": "Sus recompensas de KYC no han sido acreditadas.",
   "Region": "Región",
   "Region Setting": "Configuración de la región",
   "America": "América",
