--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "L'URL de base de ComfyUI est requise.",
   "Command": "Commande",
   "Confirm Password": "Confirmer le mot de passe",
-  "Congratulations on becoming the": "Félicitations pour devenir",
+  "Congratulations on becoming": "Félicitations pour devenir",
   "Congratulations on passing the verification!": "Félicitations pour avoir passé la vérification!",
   "Congratulations on successfully upgrading pro!": "Félicitations pour avoir réussi à mettre à niveau pro!",
   "Connections": "Connexions",
@@ -642,6 +642,16 @@
   "Your kyc rewards have been credited.": "Vos récompenses de KYC ont été créditées.",
   "The identity validate fail": "La validation de l'identité a échoué",
   "Your haven't started live testing yet": "Vous n'avez pas encore commencé les tests en direct",
+  "AUTHENTICATED": "Authentifié",
+  "AUTHENTICATING": "Authentifiant",
+  "KYC AUTHENTICATION": "Authentification KYC",
+  "REWARD CREDIT": "Crédit de récompense",
+  "SUCCESS": "Succès",
+  "FAIL": "Échec",
+  "AUTHENTICATION RESULT": "Résultat de l'authentification",
+  "INFO": "Information",
+  "Wallet Adress": "Adresse de portefeuille",
+  "Your kyc rewards have not been credited.": "Vos récompenses KYC n'ont pas été créditées.",
   "Region": "Région",
   "Region Setting": "Paramètres de région",
   "America": "Amérique",
