--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "URL Dasar ComfyUI diperlukan.",
   "Command": "Perintah",
   "Confirm Password": "Konfirmasi Kata Sandi",
-  "Congratulations on becoming the": "Selamat atas menjadi",
+  "Congratulations on becoming": "Selamat atas menjadi",
   "Congratulations on passing the verification!": "Selamat atas lulus verifikasi!",
   "Congratulations on successfully upgrading pro!": "Selamat atas berhasil melakukan upgrade pro!",
   "Connections": "Koneksi",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "Hadiah KYC Anda telah dikreditkan.",
   "The identity validate fail": "Validasi identitas gagal",
   "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
+  "AUTHENTICATED": "Terverifikasi",
+  "AUTHENTICATING": "Sedang Memverifikasi",
+  "KYC AUTHENTICATION": "Verifikasi KYC",
+  "REWARD CREDIT": "Kredit Hadiah",
+  "SUCCESS": "Sukses",
+  "FAIL": "Gagal",
+  "AUTHENTICATION RESULT": "Hasil Autentikasi",
+  "INFO": "Informasi",
+  "Wallet Adress": "Alamat Dompet",
+  "Your kyc rewards have not been credited.": "Hadiah KYC Anda belum dikreditkan.",
   "Region": "Wilayah",
   "Region Setting": "Pengaturan Wilayah",
   "America": "Amerika",
