--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -125,7 +125,7 @@
   "ComfyUI Base URL is required.": "ComfyUI のベース URL は必須です。",
   "Command": "コマンド",
   "Confirm Password": "パスワードを確認する",
-  "Congratulations on becoming the": "～になることをお祝いします",
+  "Congratulations on becoming": "～になることをお祝いします",
   "Congratulations on passing the verification!": "検証に合格したことをお祝いします！",
   "Congratulations on successfully upgrading pro!": "プロ会員にアップグレードしたことをお祝いします！",
   "Connections": "接続",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "あなたの KYC 報酬は既に入金されました",
   "The identity validate fail": "本人確認に失敗しました",
   "Your haven't started live testing yet": "あなたはまだライブテストを始めていません",
+  "AUTHENTICATED": "認証済み",
+  "AUTHENTICATING": "認証中",
+  "KYC AUTHENTICATION": "KYC 認証",
+  "REWARD CREDIT": "報酬クレジット",
+  "SUCCESS": "せいこう",
+  "FAIL": "しっぱい",
+  "AUTHENTICATION RESULT": "にんしょうけっか",
+  "INFO": "じょうほう",
+  "Wallet Adress": "ウォレットアドレス",
+  "Your kyc rewards have not been credited.": "あなたの KYC ほうしゅう はまだクレジットされていません。",
   "Region": "ちいき",
   "Region Setting": "ちいきせってい",
   "America": "アメリカ",
