--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "ComfyUI 기본 URL이 필요합니다.",
   "Command": "명령",
   "Confirm Password": "비밀번호 확인",
-  "Congratulations on becoming the": "에 되신 것을 축하드립니다",
+  "Congratulations on becoming": "에 되신 것을 축하드립니다",
   "Congratulations on passing the verification!": "검증에 통과한 것을 축하드립니다!",
   "Congratulations on successfully upgrading pro!": "프로 업그레이드에 성공한 것을 축하드립니다!",
   "Connections": "연결",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "귀하의 KYC 보상이 이미 입금되었습니다",
   "The identity validate fail": "본인 인증에 실패했습니다",
   "Your haven't started live testing yet": "귀하는 아직 라이브 테스트를 시작하지 않았습니다",
+  "AUTHENTICATED": "인증되었습니다",
+  "AUTHENTICATING": "인증 중입니다",
+  "KYC AUTHENTICATION": "KYC 인증",
+  "REWARD CREDIT": "보상 크레딧",
+  "SUCCESS": "성공",
+  "FAIL": "실패",
+  "AUTHENTICATION RESULT": "인증 결과",
+  "INFO": "정보",
+  "Wallet Adress": "지갑 주소",
+  "Your kyc rewards have not been credited.": "당신의 KYC 보상은 아직 크레딧 처리되지 않았습니다.",
   "Region": "지역",
   "Region Setting": "지역 설정",
   "America": "미국",
