--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "URL base de ComfyUI é obrigatório.",
   "Command": "Comando",
   "Confirm Password": "Confirmar senha",
-  "Congratulations on becoming the": "Parabéns por se tornar o",
+  "Congratulations on becoming": "Parabéns por se tornar o",
   "Congratulations on passing the verification!": "Parabéns por passar na verificação!",
   "Congratulations on successfully upgrading pro!": "Parabéns por atualizar com sucesso o pro!",
   "Connections": "Conexões",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "Suas recompensas de KYC foram creditadas.",
   "The identity validate fail": "A validação da identidade falhou",
   "Your haven't started live testing yet": "Você ainda não começou os testes ao vivo",
+  "AUTHENTICATED": "Autenticado",
+  "AUTHENTICATING": "Autenticando",
+  "KYC AUTHENTICATION": "Autenticação KYC",
+  "REWARD CREDIT": "Crédito de recompensa",
+  "SUCCESS": "Sucesso",
+  "FAIL": "Falha",
+  "AUTHENTICATION RESULT": "Resultado da autenticação",
+  "INFO": "Informação",
+  "Wallet Adress": "Endereço da carteira",
+  "Your kyc rewards have not been credited.": "Suas recompensas KYC ainda não foram creditadas.",
   "Region": "Região",
   "Region Setting": "Configuração da região",
   "America": "América",
