--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "Треbuется базовый URL ComfyUI.",
   "Command": "Команда",
   "Confirm Password": "Подтвердить пароль",
-  "Congratulations on becoming the": "Поздравляем с тем, что стали",
+  "Congratulations on becoming": "Поздравляем с тем, что стали",
   "Congratulations on passing the verification!": "Поздравляем с прохождением верификации!",
   "Congratulations on successfully upgrading pro!": "Поздравляем с успешным обновлением до pro!",
   "Connections": "Соединения",
@@ -642,6 +642,16 @@
   "Your kyc rewards have been credited.": "Ваши награды за KYC были зачислены.",
   "The identity validate fail": "Проверка идентификации не удалась",
   "Your haven't started live testing yet": "Вы еще не начали тестирование вживую",
+  "AUTHENTICATED": "Аутентифицирован",
+  "AUTHENTICATING": "Аутентификация проходит",
+  "KYC AUTHENTICATION": "Аутентификация KYC",
+  "REWARD CREDIT": "Зачисление вознаграждения",
+  "SUCCESS": "Успех",
+  "FAIL": "Неудача",
+  "AUTHENTICATION RESULT": "Результат аутентификации",
+  "INFO": "Информация",
+  "Wallet Adress": "Адрес кошелька",
+  "Your kyc rewards have not been credited.": "Ваши вознаграждения за KYC еще не были зачислены.",
   "Region": "Регион",
   "Region Setting": "Настройка региона",
   "America": "Америка",
