--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "ต้องการ URL ฐานของ ComfyUI.",
   "Command": "คำสั่ง",
   "Confirm Password": "ยืนยันรหัสผ่าน",
-  "Congratulations on becoming the": "ยินดีในที่เป็น",
+  "Congratulations on becoming": "ยินดีในที่เป็น",
   "Congratulations on passing the verification!": "ยินดีในที่ผ่านการตรวจสอบ!",
   "Congratulations on successfully upgrading pro!": "ยินดีในที่อัปเกรด pro สำเร็จ!",
   "Connections": "การเชื่อมต่อ",
@@ -642,6 +642,16 @@
   "Your kyc rewards have been credited.": "รางวัลจาก KYC ของคุณได้ถูกcreditedแล้ว",
   "The identity validate fail": "การตรวจสอบตัวตนล้มเหลว",
   "Your haven't started live testing yet": "คุณยังไม่ได้เริ่มทดสอบสด",
+  "AUTHENTICATED": "ได้รับการยืนยันแล้ว",
+  "AUTHENTICATING": "กำลังยืนยัน",
+  "KYC AUTHENTICATION": "การยืนยัน KYC",
+  "REWARD CREDIT": "เครดิตรางวัล",
+  "SUCCESS": "ความสำเร็จ",
+  "FAIL": "ความล้มเหลว",
+  "AUTHENTICATION RESULT": "ผลการยืนยัน",
+  "INFO": "ข้อมูล",
+  "Wallet Adress": "ที่อยู่กระเป๋าเงิน",
+  "Your kyc rewards have not been credited.": "รางวัล KYC ของคุณยังไม่ได้รับการบันทึกเครดิต",
   "Region": "ภูมิภาค",
   "Region Setting": "การตั้งค่าภูมิภาค",
   "America": "อเมริกา",
