--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "ComfyUI Temel URL gereklidir.",
   "Command": "Komut",
   "Confirm Password": "Şifreyi Onayla",
-  "Congratulations on becoming the": "Olma durumunuza tebrik ederiz",
+  "Congratulations on becoming": "Olma durumunuza tebrik ederiz",
   "Congratulations on passing the verification!": "Doğrulamayı geçme durumunuza tebrik ederiz!",
   "Congratulations on successfully upgrading pro!": "Pro yükseltmesini başarıyla tamamlama durumunuza tebrik ederiz!",
   "Connections": "Bağlantılar",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "KYC ödülleriniz tahsil edilmiştir.",
   "The identity validate fail": "Kimlik doğrulaması başarısız oldu",
   "Your haven't started live testing yet": "Canlı testleri henüz başlamadınız",
+  "AUTHENTICATED": "Doğrulanmış",
+  "AUTHENTICATING": "Doğrulama Yapılıyor",
+  "KYC AUTHENTICATION": "KYC Doğrulama",
+  "REWARD CREDIT": "Ödül Kredisi",
+  "SUCCESS": "Başarılı",
+  "FAIL": "Başarısız",
+  "AUTHENTICATION RESULT": "Kimlik Doğrulama Sonucu",
+  "INFO": "Bilgi",
+  "Wallet Adress": "Cüzdan Adresi",
+  "Your kyc rewards have not been credited.": "KYC ödülleriniz henüz kredilere eklenmedi.",
   "Region": "Bölge",
   "Region Setting": "Bölge Ayarları",
   "America": "Amerika",
