--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -124,7 +124,7 @@
   "ComfyUI Base URL is required.": "Địa chỉ URL cơ sở ComfyUI là bắt buộc.",
   "Command": "Lệnh",
   "Confirm Password": "Xác nhận mật khẩu",
-  "Congratulations on becoming the": "Chúc mừng bạn đã trở thành",
+  "Congratulations on becoming": "Chúc mừng bạn đã trở thành",
   "Congratulations on passing the verification!": "Chúc mừng bạn đã vượt qua xác nhận!",
   "Congratulations on successfully upgrading pro!": "Chúc mừng bạn đã nâng cấp pro thành công!",
   "Connections": "Kết nối",
@@ -643,6 +643,16 @@
   "Your kyc rewards have been credited.": "Hadiah KYC Anda sudah dikreditkan",
   "The identity validate fail": "Validasi identitas gagal",
   "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
+  "AUTHENTICATED": "Đã được xác thực",
+  "AUTHENTICATING": "Đang xác thực",
+  "KYC AUTHENTICATION": "Xác thực KYC",
+  "REWARD CREDIT": "Đọc tiền thưởng",
+  "SUCCESS": "Thành công",
+  "FAIL": "Thất bại",
+  "AUTHENTICATION RESULT": "Kết quả xác thực",
+  "INFO": "Thông tin",
+  "Wallet Adress": "Địa chỉ ví",
+  "Your kyc rewards have not been credited.": "Các phần thưởng KYC của bạn vẫn chưa được ghi vào tài khoản.",
   "Region": "Vùng",
   "Region Setting": "Cài đặt vùng",
   "America": "Mỹ",
