--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -112,7 +112,7 @@
   "Command": "命令",
   "Complete KYC": "认证KYC",
   "Confirm Password": "确认密码",
-  "Congratulations on becoming the": "恭喜成为",
+  "Congratulations on becoming": "恭喜成为",
   "Congratulations on passing the verification!": "恭喜通过验证！",
   "Congratulations on successfully upgrading pro!": "恭喜成功升级为专业版！",
   "Connect Wallet": "连接钱包",
@@ -642,6 +642,16 @@
   "Your kyc rewards have been credited.": "您的 KYC 奖励已入账",
   "The identity validate fail": "身份验证失败",
   "Your haven't started live testing yet": "您还尚未开始直播测试",
+  "AUTHENTICATED": "认证完成",
+  "AUTHENTICATING": "正在认证",
+  "KYC AUTHENTICATION": "KYC认证",
+  "REWARD CREDIT": "奖励发放",
+  "SUCCESS": "成功",
+  "FAIL": "失败",
+  "AUTHENTICATION RESULT": "认证结果",
+  "INFO": "信息",
+  "Wallet Adress": "钱包地址",
+  "Your kyc rewards have not been credited.": "您的 KYC 奖励未到账",
   "Region": "地区",
   "Region Setting": "地区设置",
   "America": "美国",
