更新朋友 未完成kyc认证提示

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -666,6 +666,7 @@
   "Optimize code writing": "",
   "Please select at least one model.": "",
   "You can select up to four models at most.": "",
+  "Your friend not complete the KYC verification.": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
