--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -665,6 +665,7 @@
   "Optimize code writing": "Optimiser l'écriture de code",
   "Please select at least one model.": "Veuillez sélectionner au moins un modèle.",
   "You can select up to four models at most.": "Vous pouvez sélectionner jusqu'à quatre modèles au maximum.",
+  "Your friend not complete the KYC verification.": "Votre ami n'a pas terminé la vérification KYC.",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
