--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -666,6 +666,7 @@
   "Optimize code writing": "Mengoptimalkan penulisan kode",
   "Please select at least one model.": "Silakan pilih setidaknya satu model.",
   "You can select up to four models at most.": "Anda dapat memilih hingga empat model terbanyak.",
+  "Your friend not complete the KYC verification.": "Teman Anda belum menyelesaikan verifikasi KYC.",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
