--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -666,6 +666,7 @@
   "Optimize code writing": "Tối ưu hóa việc viết mã",
   "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
   "You can select up to four models at most.": "Bạn có thể chọn tối đa bốn mô hình.",
+  "Your friend not complete the KYC verification.": "Bạn của bạn chưa hoàn thành xác thực KYC.",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
