更新 文字提示

--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -599,6 +599,7 @@
   "Close Wallet": "Cerrar billetera",
   "Share to Obtain DGC": "Compartir para obtener DGC",
   "Buy": "Comprar",
+  "Node Sale": "Venta de Nodos",
   "Transactions": "Transacciones",
   "Authed KYC": "KYC Autorizado",
   "Complete KYC": "Completar KYC",
@@ -606,6 +607,7 @@
   "Create Wallet": "Crear billetera",
   "Open Wallet": "Abrir billetera",
   "Set as default": "Establecer como predeterminado",
+  "Click to select more models": "Haga clic para seleccionar más modelos",
   "Unlimited DGC Reward Task": "Tarea de recompensa DGC ilimitada",
   "Rewards History": "Historia de recompensas",
   "Rewards Details": "Detalles de recompensas",
