--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -598,6 +598,7 @@
   "Close Wallet": "Fermer le portefeuille",
   "Share to Obtain DGC": "Partager pour obtenir DGC",
   "Buy": "Acheter",
+  "Node Sale": "Vente de Nœuds",
   "Transactions": "Transactions",
   "Authed KYC": "KYC autorisé",
   "Complete KYC": "Terminer le KYC",
@@ -605,6 +606,7 @@
   "Create Wallet": "Créer le portefeuille",
   "Open Wallet": "Ouvrir le portefeuille",
   "Set as default": "Définir par défaut",
+  "Click to select more models": "Cliquez pour sélectionner plus de modèles",
   "Unlimited DGC Reward Task": "Tâche de récompense DGC illimité",
   "Rewards History": "Histoire des récompenses",
   "Rewards Details": "Détails des récompenses",
