--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -599,6 +599,7 @@
   "Close Wallet": "Tutup Dompet",
   "Share to Obtain DGC": "Bagikan untuk Mendapatkan DGC",
   "Buy": "Beli",
+  "Node Sale": "Penjualan Node",
   "Transactions": "Transaksi",
   "Authed KYC": "KYC yang Diotorisasi",
   "Complete KYC": "Selesai KYC",
@@ -606,6 +607,7 @@
   "Create Wallet": "Buat Dompet",
   "Open Wallet": "Buka Dompet",
   "Set as default": "Atur sebagai Default",
+  "Click to select more models": "Klik untuk memilih lebih banyak model",
   "Unlimited DGC Reward Task": "Tugas Hadiah DGC Tanpa Batas",
   "Rewards History": "Sejarah Hadiah",
   "Rewards Details": "Detail Hadiah",
