--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -601,6 +601,7 @@
   "Close Wallet": "ウォレットを閉じる",
   "Share to Obtain DGC": "DGC を取得するために共有",
   "Buy": "購入",
+  "Node Sale": "ノード販売",
   "Transactions": "取引履歴",
   "Authed KYC": "認証済み KYC",
   "Complete KYC": "KYC を完了する",
@@ -608,6 +609,7 @@
   "Create Wallet": "ウォレットを作成する",
   "Open Wallet": "ウォレットを開く",
   "Set as default": "デフォルトに設定",
+  "Click to select more models": "もっと多くのモデルを選択するためにクリックしてください",
   "Unlimited DGC Reward Task": "無制限 DGC 報酬タスク",
   "Rewards History": "報酬履歴",
   "Rewards Details": "報酬詳細",
