--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -599,6 +599,7 @@
   "Close Wallet": "지갑 닫기",
   "Share to Obtain DGC": "DGC를 얻기 위해 공유하기",
   "Buy": "구매",
+  "Node Sale": "노드 판매",
   "Transactions": "거래",
   "Authed KYC": "인증된 KYC",
   "Complete KYC": "완료된 KYC",
@@ -606,6 +607,7 @@
   "Create Wallet": "지갑 생성",
   "Open Wallet": "지갑 열기",
   "Set as default": "기본으로 설정",
+  "Click to select more models": "더 많은 모델을 선택하기 위해 클릭하세요",
   "Unlimited DGC Reward Task": "제한 없는 DGC 보상 태스크",
   "Rewards History": "보상 이력",
   "Rewards Details": "보상 세부사항",
