--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -599,6 +599,7 @@
   "Close Wallet": "Fechar a carteira",
   "Share to Obtain DGC": "Compartilhar para obter DGC",
   "Buy": "Comprar",
+  "Node Sale": "Venda de Nó",
   "Transactions": "Transações",
   "Authed KYC": "KYC autorizado",
   "Complete KYC": "Completar o KYC",
@@ -606,6 +607,7 @@
   "Create Wallet": "Criar a carteira",
   "Open Wallet": "Abrir a carteira",
   "Set as default": "Definir como padrão",
+  "Click to select more models": "Clique para selecionar mais modelos",
   "Unlimited DGC Reward Task": "Tarefa de recompensa DGC ilimitada",
   "Rewards History": "História de recompensas",
   "Rewards Details": "Detalhes das recompensas",
