--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -598,6 +598,7 @@
   "Close Wallet": "ปิดกระเป๋าเงิน",
   "Share to Obtain DGC": "แชร์เพื่อรับ DGC",
   "Buy": "ซื้อ",
+  "Node Sale": "การขายโหนด",
   "Transactions": "ธุรกรรม",
   "Authed KYC": "KYC ที่ได้รับการยืนยัน",
   "Complete KYC": "KYC เสร็จสมบูรณ์",
@@ -605,6 +606,7 @@
   "Create Wallet": "สร้างกระเป๋าเงิน",
   "Open Wallet": "เปิดกระเป๋าเงิน",
   "Set as default": "ตั้งเป็นค่าเริ่มต้น",
+  "Click to select more models": "Нажмите, чтобы выбрать больше моделей",
   "Unlimited DGC Reward Task": "งานรางวัล DGC ที่ไม่มี จำกัด",
   "Rewards History": "ประวัติการรางวัล",
   "Rewards Details": "รายละเอียดการรางวัล",
