--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -599,6 +599,7 @@
   "Close Wallet": "Cüzdanı Kapat",
   "Share to Obtain DGC": "DGC Almak için Paylaş",
   "Buy": "Satın Al",
+  "Node Sale": "Düğüm Satışı",
   "Transactions": "İşlemler",
   "Authed KYC": "Kimlik Doğrulama Onaylı",
   "Complete KYC": "Kimlik Doğrulamasını Tamamla",
@@ -606,6 +607,7 @@
   "Create Wallet": "Cüzdan Oluştur",
   "Open Wallet": "Cüzdanı Aç",
   "Set as default": "Varsayılan Olarak Ayarla",
+  "Click to select more models": "Daha fazla model seçmek için tıklayın",
   "Unlimited DGC Reward Task": "Sınırsız DGC Ödül Görev",
   "Rewards History": "Ödüller Tarihi",
   "Rewards Details": "Ödüller Detayları",
