--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -599,6 +599,7 @@
   "Close Wallet": "Đóng ví",
   "Share to Obtain DGC": "Chia sẻ để nhận DGC",
   "Buy": "Mua",
+  "Node Sale": "Bán Node",
   "Transactions": "Giao dịch",
   "Authed KYC": "KYC đã được xác thực",
   "Complete KYC": "Hoàn thành KYC",
@@ -606,6 +607,7 @@
   "Create Wallet": "Tạo ví",
   "Open Wallet": "Mở ví",
   "Set as default": "Đặt làm mặc định",
+  "Click to select more models": "Nhấn để chọn thêm các mô hình",
   "Unlimited DGC Reward Task": "Công việc thưởng DGC không giới hạn",
   "Rewards History": "Lịch sử thưởng",
   "Rewards Details": "Chi tiết thưởng",
