--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -75,6 +75,7 @@
   "Being lazy": "繁忙",
   "Builder Mode": "构建模式",
   "Buy": "购买",
+  "Node Sale": "节点销售",
   "Buy Now": "立即购买",
   "Bypass SSL verification for Websites": "绕过网站的 SSL 验证",
   "Cancel": "取消",
@@ -473,6 +474,7 @@
   "September": "九月",
   "Server connection verified": "服务器连接已验证",
   "Set as default": "设置为默认",
+  "Click to select more models": "点击选择更多模型",
   "Set Default Model": "设置默认模型",
   "Set embedding model (e.g. {{model}})": "设置嵌入模型（例如 {{model}}）",
   "Set Image Size": "设置图像大小",
