--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -599,6 +599,7 @@
   "Close Wallet": "Wallet schließen",
   "Share to Obtain DGC": "Teilen, um DGC zu erhalten",
   "Buy": "Kaufen",
+  "Node Sale": "Verkauf von Knoten",
   "Transactions": "Transaktionen",
   "Authed KYC": "Autorisiertes KYC",
   "Complete KYC": "KYC abschließen",
@@ -606,6 +607,7 @@
   "Create Wallet": "Wallet erstellen",
   "Open Wallet": "Wallet öffnen",
   "Set as default": "Als Standard setzen",
+  "Click to select more models": "Klicken Sie, um mehr Modelle auszuwählen",
   "Unlimited DGC Reward Task": "Aufgabe zur unbegrenzten DGC-Belohnung",
   "Rewards History": "Belohnungsgeschichte",
   "Rewards Details": "Belohnungsdetails",
@@ -666,7 +668,7 @@
   "Optimize code writing": "Die Code-Schreibweise optimieren",
   "Please select at least one model.": "Bitte wählen Sie mindestens ein Modell aus.",
   "You can select up to four models at most.": "Sie können maximal vier Modelle auswählen.",
-  "Your friend not complete the KYC verification.": "Dein Freund hat die KYC-Verifizierung abgeschlossen",
+  "Your friend complete the KYC verification.": "Dein Freund hat die KYC-Verifizierung abgeschlossen",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
