--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -599,6 +599,7 @@
   "Close Wallet": "",
   "Share to Obtain DGC": "",
   "Buy": "",
+  "Node Sale": "",
   "Transactions": "",
   "Authed KYC": "",
   "Complete KYC": "",
@@ -606,6 +607,7 @@
   "Create Wallet": "",
   "Open Wallet": "",
   "Set as default": "",
+  "Click to select more models": "",
   "Unlimited DGC Reward Task": "",
   "Rewards History": "",
   "Rewards Details": "",
