--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -598,6 +598,7 @@
   "Close Wallet": "Закрыть кошелька",
   "Share to Obtain DGC": "Поделиться для получения DGC",
   "Buy": "Купить",
+  "Node Sale": "Продажа узла",
   "Transactions": "Транзакции",
   "Authed KYC": "Авторизованный KYC",
   "Complete KYC": "Завершить KYC",
@@ -605,6 +606,7 @@
   "Create Wallet": "Создать кошелек",
   "Open Wallet": "Открыть кошелек",
   "Set as default": "Установить по умолчанию",
+  "Click to select more models": "Нажмите, чтобы выбрать больше моделей",
   "Unlimited DGC Reward Task": "Задача на получение неограниченного вознаграждения DGC",
   "Rewards History": "История наград",
   "Rewards Details": "Детали наград",
